db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-database 
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-database
  template:
    metadata:
      labels:
        app: shop-database
    spec:
      containers:
        - name: shop-database
          image: postgres:16.3
          ports:
            - containerPort: 5432 
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 300Mi
      volumes:
      - name: init-script
        configMap:
          name: init-sql

---
apiVersion: v1
kind: Service
metadata:
  name: shop-database
  namespace: shop
spec:
  selector:
    app: shop-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
