zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-zookeeper
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-zookeeper
  template:
    metadata:
      labels:
        app: shop-zookeeper
    spec:
      containers:
        - name: shop-zookeeper
          image: wurstmeister/zookeeper:latest
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: shop-zookeeper
  namespace: shop
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: shop-zookeeper
